fix dialog popup show scroll on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,11 +98,6 @@
   }
 }
 
-body,
-html {
-  overflow-x: hidden;
-}
-
 
 b {
   text-transform: uppercase !important;
